fix modal z-index

--- a/src/style.css
+++ b/src/style.css
@@ -42,6 +42,7 @@ footer {
     background-color: rgba(0, 0, 0, 0.75);
     align-items: center;
     justify-content: center;
+    z-index: 1;
 }
 button {
     color: var(--primary-foreground);
